fix: resolve docker container file permission issues and optimize import speed
- Add DOCKER_UID/DOCKER_GID environment variables to run container as
  current user, fixing permission denied errors on both Linux and macOS
- Replace bash loop with single jq call for OTEL format conversion,
  reducing process calls from 7+ per record to 1 per file
- Use jq built-in strptime/mktime for timestamp parsing instead of
  external date command for cross-platform compatibility

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,8 @@ services:
     image: otel/opentelemetry-collector-contrib:latest
     container_name: cc-stats-otel-collector
     restart: unless-stopped
+    # 以当前用户身份运行，确保文件权限正确
+    user: "${DOCKER_UID:-0}:${DOCKER_GID:-0}"
     ports:
       - "4318:4318"   # OTLP HTTP
       - "4317:4317"   # OTLP gRPC
